cmake_minimum_required(VERSION 3.22)
project(ProblemSolving)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProblemSolving main.cpp "Problems_Sol_Functions/Count Odd Numbers in an Interval Range.cpp" "Problems_Sol_Functions/Average Salary Excluding the Minimum and Maximum Salary.cpp" "Problems_Sol_Functions/Number of 1 Bits.cpp")
