cmake_minimum_required(VERSION 3.22)
project(ProblemSolving)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProblemSolving main.cpp "Problems_Sol_Functions/Count Odd Numbers in an Interval Range.cpp" "Problems_Sol_Functions/Average Salary Excluding the Minimum and Maximum Salary.cpp" "Problems_Sol_Functions/Number of 1 Bits.cpp" "Problems_Sol_Functions/Subtract the Product and Sum of Digits of an Integer.cpp" "Problems_Sol_Functions/Largest Perimeter Triangle.cpp" "Problems_Sol_Functions/Find Nearest Point That Has the Same X or Y Coordinate.cpp" "Problems_Sol_Functions/Sign of the Product of an Array.cpp" "Problems_Sol_Functions/Can Make Arithmetic Progression From Sequence.cpp" "Problems_Sol_Functions/Happy Number.cpp" "Problems_Sol_Functions/Check if One String Swap Can Make Strings Equal.cpp" "Problems_Sol_Functions/Check If It Is a Straight Line.cpp" "Problems_Sol_Functions/N-ary Tree Preorder Traversal(UNSOLVED).cpp" "Problems_Sol_Functions/Move Zeroes.cpp" "Problems_Sol_Functions/Next Greater Element I.cpp" "Problems_Sol_Functions/Richest Customer Wealth.cpp")
